force-app/main/default/objects/Inventory_Audit_Log__c/Inventory_Audit_Log__c.object-meta.xml
<CustomObject>
    <label>Inventory Audit Log</label>
    <nameField>
        <displayFormat>LOG-{00000}</displayFormat>
        <label>Audit Log Number</label>
        <type>AutoNumber</type>
        <startingNumber>1</startingNumber>
    </nameField>
    <pluralLabel>Inventory Audit Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>