force-app/main/default/objects/Inventory_Audit_Log__c/fields/Log_Date__c.field-meta.xml
<CustomField>
    <fullName>Log_Date__c</fullName>
    <label>Log Date</label>
    <type>DateTime</type>
    <required>true</required>
</CustomField>