force-app/main/default/objects/Inventory_Audit_Log__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Inventory_Audit_Logs</relationshipName>
</CustomField>